--- a/templates/jinja_template.ipynb
+++ b/templates/jinja_template.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Template for creating the jinja cell to generate the html file.\n",
     "All things within <> has to be replaced with the right name.   \n",
-    "For \\<NameOfTopic\\> it is important to take over the part of the file name of the corresponding template."
+    "For \\<ScriptName\\> please take over the script name of the jupyter notebook you are using this cell in."
    ]
   },
   {
@@ -18,18 +18,19 @@
     "# from jinja2 import Template\n",
     "# import os\n",
     "\n",
-    "# input_template_path = os.path.join(script_dir, '..\\Website\\\\templates\\\\template_<NameOfTopic>.html')\n",
-    "# output_html_path = os.path.join(script_dir, '..\\Website\\\\html\\\\<NameOfTopic>.html')\n",
+    "# plots = [('<ScriptName>_plot1',<VariableOfFirstFigure>), ('<ScriptName>_plot2',<VariableOfSecondFigure>), ...]\n",
     "\n",
-    "# plotly_jinja_data = {'<NameOfFirstPlaceholderInHTML>': <NameOfFirstFigure>.to_html(full_html=False)\n",
-    "#                      , '<NameOfSecondPlaceholderInHTML>': <NameOfFirstFigure>.to_html(full_html=False)\n",
-    "#                      , and more with this scheme...\n",
-    "#                      }\n",
+    "# input_template_path = os.path.join(script_dir, '..\\Website\\\\templates\\\\plot_template.html')\n",
     "\n",
-    "# with open(output_html_path, \"w\", encoding=\"utf-8\") as output_file:\n",
-    "#     with open(input_template_path) as template_file:\n",
-    "#         j2_template = Template(template_file.read())\n",
-    "#         output_file.write(j2_template.render(plotly_jinja_data))"
+    "# for filename, plot in plots:\n",
+    "#     output_html_path = os.path.join(script_dir, '..\\Website\\\\plots\\\\' + filename + '.html')\n",
+    "\n",
+    "#     plotly_jinja_data = {\"fig\": plot.to_html(full_html=False)}\n",
+    "\n",
+    "#     with open(output_html_path, \"w\", encoding=\"utf-8\") as output_file:\n",
+    "#         with open(input_template_path) as template_file:\n",
+    "#             j2_template = Template(template_file.read())\n",
+    "#             output_file.write(j2_template.render(plotly_jinja_data))"
    ]
   }
  ],
